kubernetes/jellyfin/jellyfin-statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 0
  serviceName: jellyfin
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
      annotations:
        enable.version-checker.io/kube-jellyfin: "true"
        seccomp.security.alpha.kubernetes.io/defaultProfileName: "runtime/default"
    spec:
      automountServiceAccountToken: false
      serviceAccountName: jellyfin-sa
      securityContext:
        fsGroup: 18096
        runAsGroup: 18096
        runAsUser: 18096
        runAsNonRoot: true
      containers:
        - image: jellyfin/jellyfin:10.7.7
          imagePullPolicy: IfNotPresent
          name: jellyfin
          resources:
            requests:
              memory: "1G"
              cpu: "250m"
            limits:
              memory: "2G"
              cpu: "500m"
          ports:
            - containerPort: 8096
            - containerPort: 8920
            - containerPort: 1900
            - containerPort: 7359
          securityContext:
            runAsGroup: 18096
            runAsUser: 18096
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - all
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: jellyfin-cache
              mountPath: /cache
            - name: jellyfin-media
              mountPath: /media/Photos
              subPath: Arthur/files/Photos/
            - name: jellyfin-media
              mountPath: /media/Trips-Events
              subPath: Arthur/files/Trips-Events/
            - name: jellyfin-media
              mountPath: /media/Music
              subPath: Arthur/files/Music/
            - name: jellyfin-media
              mountPath: /media/Videos
              subPath: Arthur/files/Videos/
      hostname: jellyfin
      restartPolicy: Always
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
        - name: jellyfin-cache
          persistentVolumeClaim:
            claimName: jellyfin-cache-pvc
        - name: jellyfin-media
          persistentVolumeClaim:
            claimName: jellyfin-media
            readOnly: true
