kubernetes/jellyfin/jellyfin-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`jellyfin.<URL>`)
      kind: Rule
      services:
        - name: jellyfin
          port: 80
